[allPostsStyles.css]<Fix> Fix issue: Content too high caused overflow.

--- a/public/css/allPostsStyles.css
+++ b/public/css/allPostsStyles.css
@@ -27,15 +27,15 @@
     max-width: 22rem;
     height: 10rem;
     border-radius: 0.3rem;
-    background: linear-gradient(to bottom, #e9d8d8, #f9f9f9); 
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
-    transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out; 
-    border-left: 5px solid var(--theme-color); 
+    /* background: linear-gradient(to bottom, #e9d8d8, #f9f9f9); */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+    border-left: 5px solid var(--theme-color);
 }
 
 .question-card:hover {
-    transform: translateY(-5px); 
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); 
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .question-card .card-title {
@@ -47,27 +47,29 @@
 
 .question-card .card-title .user-name {
     font-weight: 600;
-    color: var(--theme-color); 
+    color: var(--theme-color);
 }
 
 .question-card .card-title .create-time {
-    font-size: 0.8rem; 
-    opacity: 0.75; 
+    font-size: 0.8rem;
+    opacity: 0.75;
     color: var(--gray-heavy);
 }
 
 .question-card p {
-    margin: 0.5em 0; 
-    line-height: 1.4; 
+    margin: 0.5em 0;
+    line-height: 1.4;
 }
 
 .question-card .content {
     position: relative;
     display: block;
-    height: calc(80%);
+    margin: 0;
+    height: calc(75%);
     width: calc(98%);
     overflow: hidden;
     white-space: normal;
+
     text-overflow: ellipsis;
 }
 
